// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "space-between",
          "paddingLeft": 12,
          "paddingRight": 12,
          "width": "100%",
        },
        {
          "borderRadius": 12,
          "borderWidth": 1,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#FFFCFA",
        },
        {
          "borderColor": "#2B1911",
        },
        false,
        false,
        {
          "marginBottom": 1,
          "marginTop": 1,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#BAADA7"
      removeClippedSubviews={false}
      style={
        [
          {
            "flexShrink": 1,
            "fontFamily": "Baloo2-Regular",
            "fontSize": 18,
            "height": 40,
            "letterSpacing": 0.18,
            "lineHeight": 29.25,
            "paddingBottom": 0,
            "paddingTop": 0,
            "width": "100%",
          },
          {
            "color": "#BAADA7",
          },
          false,
          {
            "borderColor": "transparent",
            "borderWidth": 1,
          },
          false,
          false,
        ]
      }
      textAlignVertical="center"
    />
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 16,
        }
      }
    />
  </View>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Medium",
          "fontSize": 14,
          "letterSpacing": 0.14,
          "lineHeight": 20,
          "marginLeft": 12,
          "marginTop": 4,
        },
        {
          "color": "#DF321F",
        },
      ]
    }
  >
     
  </PeachText>
</View>
`;

exports[`Input renders correctly with icon 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "space-between",
          "paddingLeft": 12,
          "paddingRight": 12,
          "width": "100%",
        },
        {
          "borderRadius": 12,
          "borderWidth": 1,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#FFFCFA",
        },
        {
          "borderColor": "#2B1911",
        },
        false,
        false,
        {
          "marginBottom": 1,
          "marginTop": 1,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#BAADA7"
      removeClippedSubviews={false}
      style={
        [
          {
            "flexShrink": 1,
            "fontFamily": "Baloo2-Regular",
            "fontSize": 18,
            "height": 40,
            "letterSpacing": 0.18,
            "lineHeight": 29.25,
            "paddingBottom": 0,
            "paddingTop": 0,
            "width": "100%",
          },
          {
            "color": "#2B1911",
          },
          false,
          {
            "borderColor": "transparent",
            "borderWidth": 1,
          },
          false,
          false,
        ]
      }
      textAlignVertical="center"
      value="value"
    />
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 16,
        }
      }
    >
      <TouchableIcon
        iconColor="#2B1911"
        iconSize={20}
        id="copy"
        onPress={[MockFunction]}
      />
    </View>
  </View>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Medium",
          "fontSize": 14,
          "letterSpacing": 0.14,
          "lineHeight": 20,
          "marginLeft": 12,
          "marginTop": 4,
        },
        {
          "color": "#DF321F",
        },
      ]
    }
  >
     
  </PeachText>
</View>
`;

exports[`Input renders correctly with placeholder 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "space-between",
          "paddingLeft": 12,
          "paddingRight": 12,
          "width": "100%",
        },
        {
          "borderRadius": 12,
          "borderWidth": 1,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#FFFCFA",
        },
        {
          "borderColor": "#2B1911",
        },
        false,
        false,
        {
          "marginBottom": 1,
          "marginTop": 1,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="placeholder"
      placeholderTextColor="#BAADA7"
      removeClippedSubviews={false}
      style={
        [
          {
            "flexShrink": 1,
            "fontFamily": "Baloo2-Regular",
            "fontSize": 18,
            "height": 40,
            "letterSpacing": 0.18,
            "lineHeight": 29.25,
            "paddingBottom": 0,
            "paddingTop": 0,
            "width": "100%",
          },
          {
            "color": "#BAADA7",
          },
          false,
          {
            "borderColor": "transparent",
            "borderWidth": 1,
          },
          false,
          false,
        ]
      }
      textAlignVertical="center"
    />
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 16,
        }
      }
    />
  </View>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Medium",
          "fontSize": 14,
          "letterSpacing": 0.14,
          "lineHeight": 20,
          "marginLeft": 12,
          "marginTop": 4,
        },
        {
          "color": "#DF321F",
        },
      ]
    }
  >
     
  </PeachText>
</View>
`;

exports[`Input renders correctly with value 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "space-between",
          "paddingLeft": 12,
          "paddingRight": 12,
          "width": "100%",
        },
        {
          "borderRadius": 12,
          "borderWidth": 1,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#FFFCFA",
        },
        {
          "borderColor": "#2B1911",
        },
        false,
        false,
        {
          "marginBottom": 1,
          "marginTop": 1,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#BAADA7"
      removeClippedSubviews={false}
      style={
        [
          {
            "flexShrink": 1,
            "fontFamily": "Baloo2-Regular",
            "fontSize": 18,
            "height": 40,
            "letterSpacing": 0.18,
            "lineHeight": 29.25,
            "paddingBottom": 0,
            "paddingTop": 0,
            "width": "100%",
          },
          {
            "color": "#2B1911",
          },
          false,
          {
            "borderColor": "transparent",
            "borderWidth": 1,
          },
          false,
          false,
        ]
      }
      textAlignVertical="center"
      value="value"
    />
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 16,
        }
      }
    />
  </View>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Medium",
          "fontSize": 14,
          "letterSpacing": 0.14,
          "lineHeight": 20,
          "marginLeft": 12,
          "marginTop": 4,
        },
        {
          "color": "#DF321F",
        },
      ]
    }
  >
     
  </PeachText>
</View>
`;
